Fix some build errors, and build with flat_namespace

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 - hook up libradius, AVP parsing logic
 - better handling of mechanism-specific error namespace
 - better interfaces for initiator EAP configuration/credential management
+- libradius library handle is a global variable
+- radius expiry time
