--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 - hook up libradius, AVP parsing logic
 - better handling of mechanism-specific error namespace
 - better interfaces for initiator EAP configuration/credential management
-- libradius library handle is a global variable
-- radius expiry time
+- make CBT ASN.1
