--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
 - integration with initiator-side EAP channel bindings
 - integration with final supplicant architecture
-- port to Heimdal
+- test Heimdal port
