fix typo, update

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,6 @@
-mech_eap was written by Luek Howard <lukeh@padl.com>.
+The initial implementation of mech_eap was written by PADL Software
+under contract to JANET(UK).
 
+--
+Luke Howard <lukeh@padl.com>
+January, 2011
