--- a/mech_eap/TODO
+++ b/mech_eap/TODO
@@ -3,5 +3,9 @@
 - test Heimdal port
 
 - fix ABNF: no slash in the case where there is no host
-- specify anonymous behaviour: use empty name
 - always intern OIDs so they never need to be freed
+
+- handle many-to-many Shibboleth attribute mappings; need to encode
+  both attribute and value index into more
+- proper acquire_cred_ext implementation
+- MIC on flags token
