update TODO list

--- a/mech_eap/TODO
+++ b/mech_eap/TODO
@@ -7,5 +7,6 @@
 
 - handle many-to-many Shibboleth attribute mappings; need to encode
   both attribute and value index into more
+- add --with-xerces option
 - proper acquire_cred_ext implementation
-- MIC on flags token
+- MIC on flags token (merge ext-mic branch)
