--- a/eapssp/TODO
+++ b/eapssp/TODO
@@ -30,3 +30,35 @@ Phase 3
 - do we want to preserve attribute type information for claims
 - dates in INF build
 - allocate claims contiguously
+- msetup tool
+
+* set ACLs!
+
+msetup /Server ServerName
+
+msetup /MapUser Principal Account
+msetup /AddAAA Server Secret [Port]
+msetup /SetFlags Flags
+msetup /DumpState (same output if no args)
+msetup /?
+msetup /help
+
+
+
+None
+Debug
+DisableSpnego
+DisableNegoEx
+S4UOnDC
+ForceKerbRpcID
+Logon
+
+>msetup /dumpstate
+Flags = 0x0 none
+aaa-server.foo.bar:
+        aaa = project-moonshot.org
+        service = 1812
+Mapping all users (*) to a local account by the same name (*).
+No user mappings defined.
+
+
